...
    <string name="notifications_mailing_list_header">"email notifications"</string>
    <string name="notifications_mailing_list_item">"Join our mailing list"</string>
    <string name="notifications_mailing_list_description">"Turn this on if you would like to receive information about products and services you may like. You can opt-out at any time."</string>

    <!-- This should be a valid integer not a string -->
    <string name="zendesk_articles_can_not_connect">"360014456139"</string>
    <string name="question_of_the_day_correct_answer_title">"correct answer!"</string>
    <plurals name="question_of_the_day_correct_answer_body">
        <item quantity="one">"Congratulations! %1$s Point have been added to your account."</item>
        <item quantity="other">"Congratulations! %1$s Points have been added to your account."</item>
    </plurals>
    <string name="question_of_the_day_correct_answer_button">"Collect smile points"</string>
    <string name="question_of_the_day_wrong_answer_title">"nice try!"</string>
    <string name="question_of_the_day_wrong_answer_body">"Don’t worry, you can play again tomorrow there’s a new question and chance to earn points."</string>
    <string name="question_of_the_day_wrong_answer_button">"OK, got it!"</string>
    <string name="question_of_the_day_error_message">"Something when wrong, please check your internet connection."</string>
    <string name="more_ways_to_earn_points_title">"More ways to earn smile points"</string>
    <string name="more_ways_to_earn_points_brushing_reminders_header">"Turn on brushing reminders"</string>

    <!-- Copy for More Ways To Earn Points challenges is not yet delivered, we should update it before the launch. -->
    <!-- Fuzzy -->
...
    <string name="settings_rate_our_app">"Rate our app"</string>
    <string name="select_profile_header">"Who's brushing?"</string>
    <string name="select_profile_add_profile">"Add a profile"</string>
    <string name="select_profile_close">"Close"</string>
    <string name="settings_select_profile_title">"Who's brushing"</string>
    <string name="onboarding_sign_up_receive_promotions_updates">"Yes, I want to receive promotions and updates (optional)"</string>
    <string name="shop_tab_products">"Products"</string>
    <string name="shop_tab_brand_deals">"Brand Deals"</string>
    <string name="notifications_brushing_reminders_title">"Brushing reminders"</string>
    <string name="notifications_brushing_reminders_description">"Receive reminder notifications when it’s time to brush. You can set up to 3 daily notifications."</string>
    <string name="add_profile_add_a_photo">"Add a photo"</string>
    <string name="add_profile_birthday_title">"Date of birth"</string>
    <string name="add_profile_birthday_hint">"MM/YYYY"</string>
    <string name="add_profile_gender_title">"Gender"</string>
...
