...
      name="interaction"
      type="com.kolibree.android.app.ui.home.tab.home.card.question.QuestionCardInteraction" />

  </data>

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/question_card"
    style="@style/Widget.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dot_double"
    android:clickable="true"
    android:focusable="true"
...
